latex2mmlc/src/snapshots/latex2mmlc__tests__underscore.snap
---
source: latex2mmlc/src/lib.rs
expression: "x\\ y"
---
<math>
    <mi>x</mi>
    <mtext> </mtext>
    <mi>y</mi>
</math>
