latex2mmlc/src/snapshots/latex2mmlc__tests__unexpected_limits.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{hello}\\limits_0^1"
---
CannotBeUsedHere {
    got: Limits,
    correct_place: "after \\int, \\sum, ...",
}
