latex2mmlc/src/snapshots/latex2mmlc__tests__unicode_command.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\éx"
---
LatexError(
    0,
    UnknownCommand(
        "é",
    ),
)
