latex2mmlc/src/snapshots/latex2mmlc__tests__unsupported_command.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\asdf"
---
LatexError(
    0,
    UnknownCommand(
        "asdf",
    ),
)
