latex2mmlc/src/snapshots/latex2mmlc__tests__unsupported_environment.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\begin{xmatrix} 1 \\end{xmatrix}"
---
LatexError(
    0,
    UnknownEnvironment(
        "xmatrix",
    ),
)
