latex2mmlc/src/snapshots/latex2mmlc__tests__unsupported_not.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\not\\text{hello}"
---
CannotBeUsedHere {
    got: Not,
    correct_place: "before supported operators",
}
