latex2mmlc/src/snapshots/latex2mmlc__tests__vec_prime.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\vec{x}'"
---
<math>
    <msup>
        <mover>
            <mi>x</mi>
            <mo accent="true" stretchy="false">→</mo>
        </mover>
        <mo>′</mo>
    </msup>
</math>
