latex2mmlc/src/snapshots/latex2mmlc__tests__vertical_line.snap
---
source: latex2mmlc/src/lib.rs
expression: P(x|y)
---
<math>
    <mi>P</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mi>|</mi>
    <mi>y</mi>
    <mo stretchy="false">)</mo>
</math>
