latex2mmlc/src/snapshots/latex2mmlc__tests__wrong_opening_paren.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\begin[matrix} x \\end{matrix}"
---
Position: 6
UnexpectedToken {
    expected: GroupBegin,
    got: SquareBracketOpen,
}
