latex2mmlc/src/snapshots/latex2mmlc__tests__xrightarrow.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\xrightarrow{x}"
---
<math>
    <mrow>
        <mspace width="0.2778em"/>
        <mover>
            <mo lspace="0em" rspace="0em">→</mo>
            <mover>
                <mrow>
                    <mspace width="0.4286em"/>
                    <mi>x</mi>
                    <mspace width="0.4286em"/>
                </mrow>
                <mspace width="3.5em"/>
            </mover>
        </mover>
        <mspace width="0.2778em"/>
    </mrow>
</math>
